feat: add the ability to get userId by password
